--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
   
   "dependencies": {
-    "axios": "^0.27.2",
-    "dotenv": "^16.0.2",
-    "musicbrainz-api": "^0.10.2",
-    "twitter-api-v2": "^1.14.2"
+  
+    
+  "axios": "^0.27.2",
+  
+    
+  "dotenv": "^16.0.2",
+  
+    
+  "musicbrainz-api": "^0.10.2",
+  
+    
+  "puppeteer": "^20.9.0",
+  
+    
+  "twitter-api-v2": "^1.14.2"
+  
   }
 }
