--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "dependencies": {
   
     
-  "axios": "^0.27.2",
+  "@google-cloud/functions-framework": "^3.3.0",
+  
+    
+  "axios": "^1.6.2",
   
     
   "dotenv": "^16.0.2",
